// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlLabel using Theme Font Family should return a ControlLabel object with a custom font family 1`] = `
.c0 {
  color: inherit;
  background-color: hsl(0,0%,100%);
  font-family: "DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  left: 0.5rem;
  padding: 0 0.5rem;
  top: -1px;
  height: 0.4rem;
  position: absolute;
}

<label
  className="c0"
>
  Lorem Ipsum
</label>
`;

exports[`ControlLabel using Theme color should return a ControlLabel object with custom color 1`] = `
.c0 {
  color: hsl(313,67.8%,47.5%);
  background-color: hsl(305,33.9%,23.7%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  left: 0.5rem;
  padding: 0 0.5rem;
  top: -1px;
  height: 0.4rem;
  position: absolute;
}

<label
  className="c0"
>
  Lorem Ipsum
</label>
`;
